--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+/* Banner */
+
 .banner {
     background-image: url(/img/jeremy-bishop-tTY4nthc2IY-unsplash.jpg);
     width: 100%;
@@ -10,11 +12,34 @@
     height: 95vh;
 }
 
-.top-bar {
-    /*background-color: #000;
+
+.banner-text {
     display: flex;
-    width: 100%;
-    height: auto;*/
+    padding: 15% 0;
+}
+
+.banner-text-items {
+    color: #fff;
+    margin: auto;
+    text-align: center;
+    width: 50%;
+}
+
+.banner-text-items h1 {
+    font-size: 5em;
+    padding-top: 100px;
+    padding-left: 150px;
+    text-transform: uppercase;
+}
+
+.banner-text-items h2 {
+    font-size: 2em;
+    padding-left: 170px;
+}
+
+
+.top-bar {
+
 
     width: 100%;
     height: 50px;
@@ -52,31 +77,6 @@
     background-color: #49505F;
 }
 
-/* Banner */
-
-.banner-text {
-    display: flex;
-    padding: 15% 0;
-}
-
-.banner-text-items {
-    color: #fff;
-    margin: auto;
-    text-align: center;
-    width: 50%;
-}
-
-.banner-text-items h1 {
-    font-size: 5em;
-    padding-top: 100px;
-    padding-left: 150px;
-    text-transform: uppercase;
-}
-
-.banner-text-items h2 {
-    font-size: 2em;
-    padding-left: 170px;
-}
 
 /*Section - About */
 
@@ -198,30 +198,37 @@ section#about {
     width: 100%;
     background-size: cover;
     height: 60vh;
+    background-repeat: no-repeat;
 }
 
-.service-content h3 {
-    display: block;
-    margin: 0 auto;
-    color: #fff;
-    font-size: 50px;
-    position: absolute;
-    left: 50%;
-    padding-top: 14%;
+
+.service-banner-text {
+    display: flex;
+    padding: 15% 0;
 }
 
-.service-content p {
+.service-banner-text-items {
     color: #fff;
-    display: block;
-    margin: 0 auto;
+    margin: auto;
     text-align: center;
-    font-size: 20px;
-    width: 50em;
-    position: absolute;
-    left: 22%;
-    padding-top: 20%;
-    line-height: 1.6;
+    width: 50%;
 }
+
+.service-banner-text-items h3 {
+    font-size: 2em;
+    padding-top: 100px;
+    padding-left: 150px;
+    text-transform: uppercase;
+}
+
+.banner-text-items h2 {
+    font-size: 2em;
+    padding-left: 170px;
+}
+
+
+
+
 
 .service-wrapper {
     display: flex;
@@ -243,7 +250,7 @@ section#about {
 
 .service-card {
     background-color: #F2F2F2;
-    height: 40%;
+   
     padding-bottom: 20px;
 }
 
@@ -330,7 +337,7 @@ section#about {
     font-size: 35px;
     display: flex;
     justify-content: center;
-    padding-top: 70px;
+    padding-top: 20%;;
 }
 
 .contact-text p {
