--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@
 }
 
 
+
+
 .menu ul {
     display: flex;
     list-style-type: none;
@@ -77,6 +79,10 @@
     background-color: #49505F;
 }
 
+
+.btn.active {
+    background-color: #49505F;
+}
 
 /*Section - About */
 
@@ -225,8 +231,6 @@ section#about {
     font-size: 2em;
     padding-left: 170px;
 }
-
-
 
 
 
@@ -410,6 +414,22 @@ section#about {
     cursor: pointer;
     background-color: #fff;
     color: #262628;
+}
+
+#button i {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
 }
 
 @media all and (max-width:500px) {
