--- a/style.css
+++ b/style.css
@@ -342,7 +342,7 @@ section#about {
     font-size: 35px;
     display: flex;
     justify-content: center;
-    padding-top: 7%;
+    padding-top: 8%;
 }
 
 .contact-text p {
@@ -350,7 +350,6 @@ section#about {
     display: flex;
     font-size: 25px;
     text-align: center;
-    width: 45em;
     padding-left: 10rem;
     padding-top: 2em;
 }
@@ -417,17 +416,17 @@ section#about {
     color: #262628;
 }
 
-#button i {
-    display: none;
+ .fas.fa-angle-up{
+    /*display: none;*/
     position: fixed;
-    bottom: 20px;
-    right: 30px;
+    /*bottom: 20px;
+    right: 20px;*/
     z-index: 99;
-    font-size: 18px;
+    font-size: 50px;
     border: none;
     outline: none;
     background-color: red;
-    color: white;
+    color: black;
     cursor: pointer;
     padding: 15px;
     border-radius: 4px;
