--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
     width: 100%;
     background-size: cover;
     height: 95vh;
+
+
+    background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 
 
@@ -206,6 +212,10 @@ section#about {
     background-size: cover;
     height: 60vh;
     background-repeat: no-repeat;
+
+    background-attachment: fixed;
+    background-position: center;
+    
 }
 
 
@@ -334,6 +344,10 @@ section#about {
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+
+    background-attachment: fixed;
+    background-position: center;
+   
     
 }
 
