--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 .banner {
     background-image: url(/img/jeremy-bishop-tTY4nthc2IY-unsplash.jpg);
     width: 100%;
+    max-width: 1000px;
     background-size: cover;
     height: 95vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+
+    
 }
 
 .banner-text {
@@ -28,15 +31,13 @@
 }
 
 .banner-text-items h1 {
-    font-size: 5em;
+    font-size: 80px;
     padding-top: 100px;
-    padding-left: 150px;
     text-transform: uppercase;
 }
 
 .banner-text-items h2 {
-    font-size: 2em;
-    padding-left: 170px;
+    font-size: 32px;
 }
 
 .top-bar {
@@ -77,6 +78,21 @@
 a.active {
     background-color: #49505F;
 }
+
+label .menu-icon {
+    font-size: 30px;
+    color: #fff;
+    float: right;
+    line-height: 50px;
+    margin-right: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.checkbox {
+    display: none;
+}
+
 
 /*Section - About */
 
@@ -222,6 +238,7 @@ a.active {
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 70px;
+    flex: 1;
 }
 
 .service-card {
@@ -423,11 +440,178 @@ button.btn {
     opacity: 0;
 }
 
-@media all and (max-width:500px) {
-    .top-bar {
-        flex-direction: column;
-        text-align: center;
+/*Responsive Design*/
+
+@media screen and (min-width:768px) and (max-width: 992px) {
+
+        .service-card {
+            flex: 0 1 calc(50% - 16px);
+            margin-bottom: 20px;
+        }
     }
+
+    @media screen and (max-width: 767px) {
+        .service-card {
+            flex: 0 1 calc(25% - 16px);
+        }
+   
+    }
+
+  
+
+@media screen and (max-width: 468px) {
+.service-wrapper {
+    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+/*.top-bar {
+    width: 50%;
+}
+
+.nav-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 50%;
+    z-index: -1;
+    background: #000;
+    opacity: 0;
+    transition: all 0.2s ease;
+  }
+
+  .nav-wrapper ul {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+  }
+
+  .nav-wrapper ul li {
+    display: block;
+    float: none;
+    width: 100%;
+    text-align: right;
+    margin-bottom: 10px;
+  }
+
+  .nav-wrapper ul li:nth-child(1) a {
+    transition-delay: 0.2s;
+  }
+
+  .nav-wrapper ul li:nth-child(2) a {
+    transition-delay: 0.3s;
+  }
+
+  .nav-wrapper ul li:nth-child(3) a {
+    transition-delay: 0.4s;
+  }
+
+  .nav-wrapper ul li:nth-child(4) a {
+    transition-delay: 0.5s;
+  }
+
+  .nav-wrapper ul li:not(:first-child) {
+    margin-left: 0;
+  }
+
+  .nav-wrapper ul li a {
+    padding: 10px 24px;
+    opacity: 0;
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 1.2px;
+    transform: translateX(-20px);
+    transition: all 0.2s ease;
+  }
+
+  .nav-btn {
+    position: fixed;
+    right: 10px;
+    top: 10px;
+    display: block;
+    width: 48px;
+    height: 48px;
+    cursor: pointer;
+    z-index: 9999;
+    border-radius: 50%;
+  }
+
+  .nav-btn i {
+    display: block;
+    width: 20px;
+    height: 2px;
+    background: #000;
+    border-radius: 2px;
+    margin-left: 14px;
+  }
+
+  .nav-btn i:nth-child(1) {
+    margin-top: 16px;
+  }
+
+  .nav-btn i:nth-child(2) {
+    margin-top: 4px;
+    opacity: 1;
+  }
+
+  .nav-btn i:nth-child(3) {
+    margin-top: 4px;
+  
+}
+
+#nav:checked + .nav-btn {
+  transform: rotate(45deg);
+}
+
+#nav:checked + .nav-btn i {
+  background: #000;
+  transition: transform 0.2s ease;
+}
+
+#nav:checked + .nav-btn i:nth-child(1) {
+  transform: translateY(6px) rotate(180deg);
+}
+
+#nav:checked + .nav-btn i:nth-child(2) {
+  opacity: 0;
+}
+
+#nav:checked + .nav-btn i:nth-child(3) {
+  transform: translateY(-6px) rotate(90deg);
+}
+
+#nav:checked ~ .nav-wrapper {
+  z-index: 9990;
+  opacity: 1;
+}
+
+#nav:checked ~ .nav-wrapper ul li a {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.hidden {
+  display: none;
+}
+
+.btn {
+    right: 20%;
+}*/
+}
+
+
+
+@media all and (max-width:500px) {
+    
+
+    .about-wrapper {
+        width: 100%;
+    }
+
    
     .menu ul {
         flex-direction: column;
@@ -442,7 +626,5 @@ button.btn {
     .banner-text-items h2 {
         font-size: 1.5em;
     }
-    .main-content {
-        flex-direction: column;
-    }
+   
 }
