--- a/style.css
+++ b/style.css
@@ -225,12 +225,12 @@ label .menu-icon {
 }
 
 .service-banner-text-items h3 {
-    font-size: 10px;
+    font-size: 5vw;
     text-transform: uppercase;
 }
 
 .service-banner-text-items p {
-    font-size: 10px;
+    font-size: 1.46vw;
     /*width: 50em;*/
 }
 
@@ -349,7 +349,7 @@ label .menu-icon {
 .contact-text p {
     color: #fff;
     display: flex;
-    font-size: 25px;
+    font-size: 1.83vw;
     text-align: center;
     padding: 2em 3em 0px 7em;
 }
@@ -471,6 +471,25 @@ flex-direction: column;
 
 .service-wrapper {
     flex-direction: column;
+}
+.service-card {
+    margin-bottom: 30px;
+}
+
+.extra-col {
+    column-width: 100%;
+}
+.service-banner-text {
+    padding: 30% 0;
+}
+
+.form-area {
+    flex-direction: column;
+    padding-bottom: 80px;
+}
+.details-area button {
+    position: absolute;
+    bottom: -1226%;
 }
 }
 
