--- a/style.css
+++ b/style.css
@@ -8,14 +8,11 @@
 .banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
     max-width: 100%;
-    /*max-width: 1000px;*/
     background-size: cover;
     height: 95vh;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-
-    
 }
 
 .banner-text {
@@ -52,29 +49,6 @@
     padding: 15px;
 }
 
-label.nav-btn {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    font-size: 26px;
-    display: none;
-}
-
-input#toggle {
-    position: absolute;
-    top: 26px;
-    right: 40px;
-
-    display: none;
-}
-
-/*Testing-Nav*/
-
-.ham {
-    visibility: hidden;
-}
-
-
 .menu ul {
     display: flex;
     list-style-type: none;
@@ -98,19 +72,13 @@ input#toggle {
     background-color: #49505F;
 }
 
-.nav-btn i {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-}
-
 a.active {
     background-color: #49505F;
 }
 
-
-
+.ham {
+    visibility: hidden;
+}
 
 /*Section - About */
 
@@ -124,7 +92,6 @@ a.active {
 
 .card {
     flex: 0 1 32%;
-
 }
 
 .card img, .extra-cards img {
@@ -249,7 +216,6 @@ a.active {
 
 .service-banner-text-items p {
     font-size: 1.46vw;
-    /*width: 50em;*/
 }
 
 .service-wrapper {
@@ -467,8 +433,8 @@ footer {
 }
 
 footer a {
-  color: #fff; 
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 /*Responsive Design*/
@@ -476,136 +442,89 @@ footer a {
 /*Mobile*/
 
 @media screen and (max-width: 767px) {
-
     .top-bar {
         background-color: transparent;
         box-shadow: none;
-       
     }
-
-    label.nav-btn {
-        display: block;
-        cursor: pointer;
-        color: #000;
-    }
-
     .nav-wrapper {
         text-align: center;
         width: 100%;
-        /*display: none;*/
     }
-
     .menu ul {
         flex-direction: column;
     }
-
     .menu ul li {
-
-            width: 80%;
-           
-            background-color: #a6a8ad;
-            display: block;
-            margin: 0 auto;
+        width: 80%;
+        background-color: #a6a8ad;
+        display: block;
+        margin: 0 auto;
+        border-bottom: 1px solid #fff;
     }
-
     .menu ul li:nth-child(1) {
-        margin-top: 170px;
+        margin-top: 50px;
     }
-    
-    
     .menu ul li a {
         border: none;
-        padding: 1vw 27.5vw;
-   
+        padding: 1vw 25vw;
         font-size: 24px;
     }
-
-   
-
-    input#toggle:checked + .nav-wrapper {
-            display: block;
+    .ham {
+        visibility: visible;
+        position: absolute;
+        /* always keep ham button on top of everything */
+        z-index: 1000;
+        top: 20px;
+        right: 50px;
+        width: 36px;
+        height: 36px;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background-color: transparent;
+        background-image: url(/img/iconfinder_menu_3017931.png);
+        background-size: 100%;
     }
-    
-
-   .about-wrapper  {
-
-flex-direction: column;
+    .showClose {
+        background-image: url(/img/iconfinder_essential_set_close_1110973.png);
     }
-.card {
-    margin-bottom: 30px;
-}
-
-.card:nth-child(3) {
-    margin-bottom: 10px;
-}
-
-.service-wrapper {
-    flex-direction: column;
-}
-.service-card {
-    margin-bottom: 30px;
-}
-
-.extra-col {
-    column-width: 100%;
-}
-.service-banner-text {
-    padding: 30% 0;
-}
-
-.form-area {
-    flex-direction: column;
-    width: 60%;
-}
-
-
-.ham {
-    visibility: visible;
-    position: absolute;
-    /* always keep ham on top of everything */
-    z-index: 1000;
-    top: 20px;
-    right: 50px;
-    width: 36px;
-    height: 36px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background-color: transparent;
-
-   
-    /* show the menu image */
-    background-image: url(/img/iconfinder_menu_3017931.png);
-    background-size: 100%;
-    
-  }
-
-  /* change ham image to close */
-.showClose {
-    background-image: url(/img/iconfinder_essential_set_close_1110973.png);
-  }
-
-  .nav-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    /*background: black;*/
-    /*width: 50vw;*/
-    /*height: 100vh;*/
-    overflow: hidden;
-    color: white;
-    /* hide the menu above the screen by default */
-    transform: translateY(-100%);
-    /* transition adds a little animation when sliding in and out the menu */
-    transition: transform 0.6s ease;
-  }
-
-  .showNav {
-    /* show the menu */
-    transform: translateY(0);
-  }
-
-
+    .nav-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow: hidden;
+        color: white;
+        transform: translateY(-100%);    /* hide the menu above the screen by default */
+        transition: transform 0.6s ease;
+    }
+    .showNav {
+        transform: translateY(0);
+        /* show the menu */
+    }
+    .about-wrapper {
+        flex-direction: column;
+    }
+    .card {
+        margin-bottom: 30px;
+    }
+    .card:nth-child(3) {
+        margin-bottom: 10px;
+    }
+    .service-wrapper {
+        flex-direction: column;
+    }
+    .service-card {
+        margin-bottom: 30px;
+    }
+    .extra-col {
+        column-width: 100%;
+    }
+    .service-banner-text {
+        padding: 30% 0;
+    }
+    .form-area {
+        flex-direction: column;
+        width: 60%;
+    }
 }
 
 @media screen and (min-width: 521px) and (max-width: 787px) {
@@ -614,15 +533,7 @@ flex-direction: column;
         flex-wrap: wrap;
         flex-direction: row;
     }
-    
     .service-card {
         flex: 0 1 48%;
     }
 }
-
-
-
- 
-
-
-
