--- a/style.css
+++ b/style.css
@@ -525,6 +525,10 @@ footer a {
         flex-direction: column;
         width: 60%;
     }
+
+    .banner {
+        object-fit: scale-down;
+    }
 }
 
 @media screen and (min-width: 521px) and (max-width: 787px) {
