--- a/style.css
+++ b/style.css
@@ -529,6 +529,9 @@ footer a {
     .banner {
         object-fit: scale-down;
     }
+    .extra-col img {
+        object-fit: scale-down;
+    }
 }
 
 @media screen and (min-width: 521px) and (max-width: 787px) {
