--- a/style.css
+++ b/style.css
@@ -528,12 +528,7 @@ footer a {
 
     .banner {
         object-fit: cover;
-        background-size: none;
-    }
-    .extra-col img {
-        object-fit: scale-down;
-        padding: 0;
-        margin: 0;
+       
     }
 }
 
@@ -545,5 +540,11 @@ footer a {
     }
     .service-card {
         flex: 0 1 48%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .extra-col img {
+        object-fit: contain;
     }
 }
