--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ a.active {
     display: block;
     border: 0;
     width: 100%;
-    height: 100vw;
+    /*height: 30vw;*/
 }
 
 .extra-col h3, .extra-col button {
@@ -543,8 +543,8 @@ footer a {
     }
 }
 
-/*@media screen and (max-width: 425px) {
+@media screen and (max-width: 425px) {
     .extra-col img {
-        object-fit: contain;
+        height: 50vw;
     }
-}*/
+}
