--- a/style.css
+++ b/style.css
@@ -544,6 +544,9 @@ footer a {
 }
 
 @media screen and (max-width: 425px) {
+    .banner {
+        width: 100vw;
+    }
     .extra-col img {
         height: 50vw;
     }
