--- a/style.css
+++ b/style.css
@@ -545,10 +545,7 @@ footer a {
 
 @media screen and (max-width: 425px) {
     .banner {
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+        background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
     }
     .extra-col img {
         height: 50vw;
