--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 /* Banner */
 
-.banner {
+/*.banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
     max-width: 100%;
     background-size: cover;
@@ -13,7 +13,7 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-}
+}*/
 
 .banner-text {
     display: flex;
@@ -546,6 +546,13 @@ footer a {
 @media screen and (max-width: 425px) {
     .banner {
         background-image: url(/img/nick-fewings-ajry0fdMcNs-unsplash.jpg);
+        background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
+    max-width: 100%;
+    background-size: cover;
+    height: 95vh;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
         
     }
     .extra-col img {
