--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ footer a {
 @media screen and (max-width: 425px) {
     .banner {
         background-image: url(/img/nick-fewings-ajry0fdMcNs-unsplash.jpg);
-        background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
+        /*background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);*/
     max-width: 100%;
     background-size: cover;
     height: 95vh;
