--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     /*max-width: 100%;*/
     background-size: contain;
     height: 95vh;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
