--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 .banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
-    width: 100%;
-    background-size: contain;
+    /*width: 100%;*/
+    background-size: cover;
     height: 95vh;
     background-attachment: fixed;
     background-position: center;
