--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 /* Banner */
 
 #home {
-    background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
-    width: 100vw;
-    background-size: cover;
     height: 95vh;
+}
+
+.banner {
+    background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
+    width: 100%;
+    background-size: cover;
+    /*height: 95vh;*/
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -552,10 +556,15 @@ footer a {
         
     }*/
 
-    .banner {
+    /*.banner {
         width: 100%;
         height: 100%;
+    }*/
+
+    #home {
+        width: ;
     }
+
     .extra-col img {
         height: 50vw;
     }
