--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@
 .banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
     width: 100%;
+    height: 100%;
     background-size: cover;
-    /*height: 95vh;
-    background-attachment: fixed;*/
+    
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
