--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    image-rendering: auto;
+    
 }
 
 .banner-text {
@@ -557,14 +559,13 @@ footer a {
         
     }*/
 
-    /*.banner {
-        width: 100%;
-        height: 100%;
-    }*/
-
-    #home {
-        width: ;
+    .banner {
+        
     }
+
+    /*#home {
+        width: ;
+    }*/
 
     .extra-col img {
         height: 50vw;
