--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 
 .banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
-    width: 100%;
-    height: 100%;
+    width: 200px;
+    height: 200px;
     background-size: cover;
     
     background-attachment: fixed;
@@ -559,10 +559,10 @@ footer a {
         
     }*/
 
-    .banner {
+    /*.banner {
         width: 50%;
         height: 50%;
-    }
+    }*/
 
     /*#home {
         width: ;
