--- a/style.css
+++ b/style.css
@@ -11,15 +11,21 @@
 
 .banner {
     background-image: url(/img/johannes-plenio-RwHv7LgeC7s-unsplash.jpg);
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     image-rendering: auto;
-    
+}
+
+.sharp {
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .banner-text {
