--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ a.active {
     height: 100vh;
     background-attachment: fixed;
     background-position: center;
+   filter: none; 
 }
 
 .contact-text h2 {
