--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ a.active {
     height: 100vh;
     background-attachment: fixed;
     background-position: center;
-   filter: blur(0); 
+
 }
 
 .contact-text h2 {
@@ -555,5 +555,9 @@ footer a {
    
     .extra-col img {
         height: 50vw;
+    }
+    .contact-wrapper {
+        width: 500px;
+        width: 500px;
     }
 }
