--- a/style.css
+++ b/style.css
@@ -557,8 +557,8 @@ footer a {
         height: 50vw;
     }
     .contact-wrapper {
-        image-rendering: auto;
-  image-rendering: crisp-edges;
-  image-rendering: pixelated;
+       position: fixed;
+       top: 0;
+       left: 0;
     }
 }
