--- a/style.css
+++ b/style.css
@@ -29,18 +29,37 @@
     padding: 15% 0;
 }
 
-.banner-text-items {
+/*.banner-text-items {
     color: #fff;
     margin: auto;
     text-align: center;
     width: 50%;
+}*/
+
+.banner-text-items {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(40vh + 15px);
+    width: 100%;
+    margin: 0;
 }
 
 .banner-text-items h1 {
+   font-size: 70px;
+}
+
+.banner-text-items h2 {
+    font-size: calc(70px + 20px);
+}
+
+
+/*.banner-text-items h1 {
     font-size: 11vw;
     padding-top: 100px;
     text-transform: uppercase;
-}
+}*/
 
 .banner-text-items h2 {
     font-size: 2.3vw;
@@ -347,15 +366,16 @@ a.active {
     display: flex;
     font-size: 20px;
     text-align: center;
-    padding: 1em 3em 0px 7em;
-    /*border: 1px solid #fff;*/
+    
+    padding: 20px;
+   
+
 
     box-sizing: content-box;
-width: 80%;
-margin: 0 auto;
-border: 1px solid #fff;
-padding: 5px;
-background-color: transparent;
+width: 60%;
+margin: 20px auto;
+background-color: rgba(0, 0, 0, 0.5);
+border-radius: 5px;
 }
 
 .form-area {
@@ -391,7 +411,6 @@ background-color: transparent;
 .details-area {
     flex: 1;
     order: 1;
-    margin-right: 3.9em;
 }
 
 .details-area input {
