--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
 }*/
 
 .banner-text-items {
+    color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -235,12 +236,12 @@ a.active {
    /* color: #fff;
     margin: auto;
     text-align: center;*/
-
+color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(30vh - 12vh);
+    height: calc(45vh - 11vh);
     width: 100%;
     margin: 0;
 }
@@ -251,8 +252,10 @@ a.active {
 }
 
 .service-banner-text-items p {
-    font-size: 2.5vw;
+    font-size: 20px;
+    text-align: center;
     padding: 0 15px;
+    width: 70%;
 }
 
 .service-wrapper {
@@ -590,7 +593,9 @@ footer a {
 }
 
 @media screen and (max-width: 425px) {
-   
+    .service-banner-text-items p {
+        font-size: 14px;
+    }
     .extra-col img {
         height: 50vw;
     }
