--- a/style.css
+++ b/style.css
@@ -55,13 +55,6 @@
     font-size: calc(70px + 20px);
 }
 
-
-/*.banner-text-items h1 {
-    font-size: 11vw;
-    padding-top: 100px;
-    text-transform: uppercase;
-}*/
-
 .banner-text-items h2 {
     font-size: 2.3vw;
 }
@@ -233,9 +226,7 @@ a.active {
 }
 
 .service-banner-text-items {
-   /* color: #fff;
-    margin: auto;
-    text-align: center;*/
+ 
 color: #fff;
     display: flex;
     flex-direction: column;
@@ -517,16 +508,17 @@ footer a {
     }
     .menu ul li a {
         border: none;
-        padding: 1vw 25vw;
+        padding: 10px 30px;
         font-size: 24px;
     }
+
     .ham {
         visibility: visible;
         position: absolute;
         /* always keep ham button on top of everything */
         z-index: 1000;
         top: 20px;
-        right: 50px;
+        right: 20px;
         width: 36px;
         height: 36px;
         border: none;
