--- a/style.css
+++ b/style.css
@@ -29,12 +29,6 @@
     padding: 15% 0;
 }
 
-/*.banner-text-items {
-    color: #fff;
-    margin: auto;
-    text-align: center;
-    width: 50%;
-}*/
 
 .banner-text-items {
     color: #fff;
@@ -572,15 +566,18 @@ footer a {
 
 }
 
-@media screen and (min-width: 521px) and (max-width: 787px) {
-    .service-wrapper {
+@media screen and (min-width: 521px) and (max-width: 991px) {
+   /* .service-wrapper {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
-    }
+    }*/
     .service-card {
-        flex: 0 1 44%;
-      margin-bottom: 20px;
+     flex: 0 1 44%;
+     /* margin-bottom: 20px;*/
+
+      max-width: 350px;
+      margin: 0 auto 30px;
     }
 }
 
