--- a/style.css
+++ b/style.css
@@ -15,20 +15,16 @@
     width: 100%;
     height: 100%;
     background-size: cover;
-    
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     image-rendering: auto;
 }
 
-
-
 .banner-text {
     display: flex;
     padding: 15% 0;
 }
-
 
 .banner-text-items {
     color: #fff;
@@ -42,7 +38,7 @@
 }
 
 .banner-text-items h1 {
-   font-size: 70px;
+    font-size: 70px;
 }
 
 .banner-text-items h2 {
@@ -220,8 +216,7 @@ a.active {
 }
 
 .service-banner-text-items {
- 
-color: #fff;
+    color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -247,13 +242,12 @@ color: #fff;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 60px;
+    margin: 40px;
     flex: 1;
 }
 
 .service-card {
     flex: 0 1 24%;
-    float: left;
 }
 
 .service-card img {
@@ -302,7 +296,6 @@ color: #fff;
     display: block;
     border: 0;
     width: 100%;
-    
 }
 
 .extra-col h3, .extra-col button {
@@ -346,13 +339,12 @@ color: #fff;
     height: 100vh;
     background-attachment: fixed;
     background-position: center;
-
 }
 
 .contact-text h2 {
     color: #fff;
     display: flex;
-    font-size: 2.56vw;
+    font-size: 40px;
     justify-content: center;
     padding-top: 5%;
 }
@@ -362,16 +354,12 @@ color: #fff;
     display: flex;
     font-size: 20px;
     text-align: center;
-    
     padding: 20px;
-   
-
-
     box-sizing: content-box;
-width: 60%;
-margin: 20px auto;
-background-color: rgba(0, 0, 0, 0.5);
-border-radius: 5px;
+    width: 60%;
+    margin: 20px auto;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
 }
 
 .form-area {
@@ -505,7 +493,6 @@ footer a {
         padding: 10px 30px;
         font-size: 24px;
     }
-
     .ham {
         visibility: visible;
         position: absolute;
@@ -531,7 +518,8 @@ footer a {
         left: 0;
         overflow: hidden;
         color: white;
-        transform: translateY(-100%);    /* hide the menu above the screen by default */
+        transform: translateY(-100%);
+        /* hide the menu above the screen by default */
         transition: transform 0.8s ease;
     }
     .showNav {
@@ -547,12 +535,9 @@ footer a {
     .card:nth-child(3) {
         margin-bottom: 10px;
     }
-    .service-wrapper {
+    /* .service-wrapper {
         flex-direction: column;
-    }
-    .service-card {
-        margin-bottom: 30px;
-    }
+    }*/
     .extra-col {
         column-width: 100%;
     }
@@ -563,21 +548,63 @@ footer a {
         flex-direction: column;
         width: 60%;
     }
-
 }
 
-@media screen and (min-width: 521px) and (max-width: 991px) {
+@media screen and (max-width: 768px) {
+    .service-card {
+        margin: 0 auto 30px;
+        flex: 0 1 44%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .service-card {
+        flex: 0 1 96%;
+        margin-bottom: 30px;
+    }
+}
+
+/*@media screen and (min-width: 521px) and (max-width: 991px) {
    /* .service-wrapper {
         display: flex;
         flex-wrap: wrap;
         flex-direction: row;
     }*/
-    .service-card {
+
+/*.service-card {
      flex: 0 1 44%;
      /* margin-bottom: 20px;*/
 
-      max-width: 350px;
-      margin: 0 auto 30px;
+/*max-width: 350px;*/
+
+/* margin: 0 auto 30px;
+    }
+    
+
+}*/
+
+/*@media screen and (max-width: 520px) {
+    .service-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    
+    .service-card {
+        flex-direction: column;
+      /*flex: 0 1 96%;
+    }
+}*/
+
+/*@media screen and (max-width: 991px) {
+    .service-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+    .service-card {
+        margin: 0 auto 30px;
+        flex: 0 1 44%;
     }
 }
 
@@ -588,4 +615,4 @@ footer a {
     .extra-col img {
         height: 50vw;
     }
-}
+}*/
