--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ a.active {
     border-radius: 5px;
     padding: 2em;
     width: 60%;
-    margin: 2em auto;
+    margin: 0 auto;
 }
 
 ::placeholder {
@@ -535,9 +535,6 @@ footer a {
     .card:nth-child(3) {
         margin-bottom: 10px;
     }
-    /* .service-wrapper {
-        flex-direction: column;
-    }*/
     .extra-col {
         column-width: 100%;
     }
@@ -551,68 +548,46 @@ footer a {
 }
 
 @media screen and (max-width: 768px) {
+    .service-banner-text-items {
+        height: 20vh;
+    }
     .service-card {
         margin: 0 auto 30px;
-        flex: 0 1 44%;
+        flex: 0 1 240px;
+      
+    }
+
+    .contact-text h2 {
+        font-size: 20px;
+    }
+
+    .contact-text p {
+        font-size: 13px;
     }
 }
 
 @media screen and (max-width: 425px) {
     .service-card {
-        flex: 0 1 96%;
+        flex: 0 1 240px;
         margin-bottom: 30px;
+      
     }
+
+    .contact-text h2 {
+        font-size: 20px;
+    }
+
+    .contact-text p {
+        font-size: 13px;
+    }
+
+    .form-area {
+       
+        width: auto;
+        margin-top: 0;
+        padding-bottom: 0;
+    }
+
+
 }
 
-/*@media screen and (min-width: 521px) and (max-width: 991px) {
-   /* .service-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }*/
-
-/*.service-card {
-     flex: 0 1 44%;
-     /* margin-bottom: 20px;*/
-
-/*max-width: 350px;*/
-
-/* margin: 0 auto 30px;
-    }
-    
-
-}*/
-
-/*@media screen and (max-width: 520px) {
-    .service-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-    
-    .service-card {
-        flex-direction: column;
-      /*flex: 0 1 96%;
-    }
-}*/
-
-/*@media screen and (max-width: 991px) {
-    .service-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-    }
-    .service-card {
-        margin: 0 auto 30px;
-        flex: 0 1 44%;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .service-banner-text-items p {
-        font-size: 14px;
-    }
-    .extra-col img {
-        height: 50vw;
-    }
-}*/
